--- a/reactApp/Dockerfile
+++ b/reactApp/Dockerfile
@@ -1,8 +1,23 @@
 FROM node:22.9.0
+
+# Establece el directorio de trabajo dentro del contenedor
 WORKDIR /app
+
+# Copia los archivos de dependencias
 COPY package*.json ./
+
+# Instala las dependencias
 RUN npm install
+RUN npm install chart.js recharts
+
+# Configuración para entornos de desarrollo que utilizan polling de archivos
 ENV CHOKIDAR_USEPOLLING=true
+
+# Copia el resto del código al contenedor
 COPY . .
+
+# Expone el puerto 5173 para que la aplicación sea accesible
 EXPOSE 5173
-CMD ["npm", "run", "dev"], [ "npm", "install", "chart.js"], [ "npm", "install", "recharts"]
+
+# Comando para iniciar la aplicación
+CMD ["npm", "run", "dev"]
