--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
