--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "express": "^4.21.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
