--- a/djangoApp/Dockerfile
+++ b/djangoApp/Dockerfile
@@ -8,5 +8,6 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 RUN curl -o ./wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh
 RUN chmod +x ./wait-for-it.sh
+RUN pip install djangorestframework-simplejwt
 COPY . .
 EXPOSE 8000
